fix issue at order service and add some functions
